--- a/ATE_Revisions.Rmd
+++ b/ATE_Revisions.Rmd
@@ -300,8 +300,8 @@ We fix the mean time of admixture to 1500 generation with different durations an
 ```{r eval=F,message=FALSE, echo=FALSE,warning=FALSE}
 # check the LRT
 n_segments=1000
-tm=1500
-td=1
+tm=2000
+td=1000
 k = 1/((td/(4*tm))^2)
 seg = VGAM::rlomax(n=n_segments,shape3.q = k,scale = k/tm)
 
@@ -408,6 +408,7 @@ Sim_2_ggplot_10000 <- data.frame(l_LRT=melt(Sim_2[[3]])[3],t_sample=melt(Sim_2[[
 Sim_2_ggplot_100000 <- data.frame(l_LRT=melt(Sim_2[[4]])[3],t_sample=melt(Sim_2[[4]])[2],n_seg=as.factor(100000),td=as.factor(rep(t_d,each=200)))
 
 Sim_2_ggplot_all <- rbind(Sim_2_ggplot_100,Sim_2_ggplot_1000,Sim_2_ggplot_10000,Sim_2_ggplot_100000)
+Sim_2_ggplot_all$value <- ifelse(Sim_2_ggplot_all$value>=10,10,Sim_2_ggplot_all$value)
 Sim_2_ggplot_all_sig_cutoff <- data.frame(n_seg = c(100,1000,10000,100000), Z = c(2.03136,2.44156,2.61434,2.70554))
 
 
@@ -608,14 +609,13 @@ Constant_sampling_time
 ``` {r figR3_3, message=FALSE, echo=FALSE,warning=FALSE,figR3_3.pos="H",fig.width=9,fig.height=10,fig.cap="\\label{fig:figR3_3} Neandertal duration simple and extended pulse AIC and F test comparison"}
 
 
-AIC_comp=data.frame(AIC_SP=Plot.data_Nea_tm$AIC_SP,
+AIC_comp=data.frame(AIC_SP=Plot.data_Nea_tm$AIC_SP,AIC_EP=Plot.data_Nea_tm$AIC_EP,
                       GF_duration=Plot.data_Nea_tm$True_GF_length)
 P_AIC <- ggplot(AIC_comp, aes(x=as.factor(GF_duration), y=AIC_SP,color=as.factor(GF_duration))) + 
                 geom_boxplot()+
                 labs(y = "AIC")+
                 labs(x = "")+
                 theme(
-                  axis.text.y=element_blank(),
                   axis.ticks.y=element_blank())+
                 coord_cartesian(expand = 0)+
                 scale_color_manual("GF Duration",
@@ -632,7 +632,6 @@ P_F_Test <- ggplot(F_Test_comp, aes(x=as.factor(GF_duration), y=log(F_Test_p),co
                     labs(y = "log p-value F Test")+
                     labs(x = "")+
                     theme(
-                      axis.text.y=element_blank(),
                       axis.ticks.y=element_blank())+
                     coord_cartesian(expand = 0)+
                 scale_color_manual("GF Duration",
@@ -642,7 +641,7 @@ P_F_Test <- ggplot(F_Test_comp, aes(x=as.factor(GF_duration), y=log(F_Test_p),co
 
 
 SP_EP_stats_comparison <- ggarrange(P_AIC,P_F_Test,labels = c("A","B"),
-          ncol = 2, nrow = 1,common.legend = T,legend = 'bottom')
+          ncol = 2, nrow = 2,common.legend = T,legend = 'top')
 
 SP_EP_stats_comparison
 ```
@@ -880,7 +879,7 @@ Inferred_LRT <- Plot_LRT(Inferred_segments,cbPalette_viridis,"Inferred segments"
 
 
 Direct_segments_LRT <- ggarrange(True_LRT,Inferred_LRT,labels = c("A","B"),
-          ncol = 2, nrow = 1,widths = c(0.5,0.5),common.legend = T,legend = 'bottom')
+          ncol = 2, nrow = 2,widths = c(0.5,0.5),common.legend = T,legend = 'top')
 Direct_segments_LRT
 ```
 
@@ -1246,6 +1245,9 @@ Figure_1_B_Data <- Results_Table("Simulations/Fig_1_Results_corrected/Result_fil
 Fig_A_1 <- Get_Data_Table(Figure_1_A_Data)
 Fig_A_1$Var1 <- as.numeric(as.character(Fig_A_1$Var1))
 Fig_A_1$Var3 <- round(as.numeric(as.character(Fig_A_1$Var3)))
+Fig_A_1$k = 1/((as.numeric(as.character(Fig_A_1$Var6))/(4*Fig_A_1$Var3))^2)
+Fig_A_1$EP_tm <- (Fig_A_1$k-1)/Fig_A_1$k*Fig_A_1$Var3
+
 Fig_A_1_Means <- aggregate(Fig_A_1[,c(1,3)],list(Fig_A_1$Var2), mean)
 Fig_A_1_Means_diff <- data.frame(sqrt((Fig_A_1_Means$Var1-Fig_A_1_Means$Var3)^2)/Fig_A_1_Means$Var3)
 Fig_A_1_Means_diff_pulse <- round(range(Fig_A_1_Means_diff[1:5,]*100))
@@ -1255,6 +1257,8 @@ Fig_B_1 <- Get_Data_Table(Figure_1_B_Data)
 Fig_B_1$Var7 <- rep('xx',length(Fig_B_1$Var1))
 Fig_B_1_Means <- data.frame(est=rep(as.numeric(as.character(Fig_B_1$Var1)),Fig_B_1$Freq),
                                duration=rep(as.numeric(as.character(Fig_B_1$Var6)),Fig_B_1$Freq))
+Fig_B_1$k = 1/((as.numeric(as.character(Fig_B_1$Var6))/(4*as.numeric(as.character(Fig_B_1$Var5))))^2)
+Fig_B_1$EP_tm <- (Fig_B_1$k-1)/Fig_B_1$k*as.numeric(as.character(Fig_B_1$Var5))
 Fig_1_B_Means_per_duration <- Fig_B_1_Means %>%
     group_by(duration) %>% 
     summarise_each(funs(mean))
@@ -1273,8 +1277,10 @@ Plot_Fig_1_A <- function(Data,Colour_P){
     geom_boxplot()+
     facet_grid(~as.factor(Var3),switch = "x")+
     geom_hline( aes(yintercept = as.numeric(as.character(Data$Var3)) ))+
-    labs(x = "True Admixture Time")+
-    labs(y = "Estimated Admixture Time")+
+    geom_hline( aes(yintercept = Data$EP_tm) ,linetype="dashed", 
+                color = "red")+
+    labs(x = "True Mean Admixture Time")+
+    labs(y = "Estimated Mean Admixture Time")+
     theme(
       axis.text.x=element_blank(),
       axis.ticks.x=element_blank())+
@@ -1295,11 +1301,13 @@ Plot_Fig_1_B <- function(Data,Colour_P){
     geom_boxplot()+
     facet_grid(~as.factor(Var6),switch = "x")+
     geom_hline( aes(yintercept = 1500 ))+
+    geom_hline( aes(yintercept = Data$EP_tm) ,linetype="dashed", 
+                color = "red")+
     theme(
       axis.text.x=element_blank(),
       axis.ticks.x=element_blank())+
     labs(x = "Admixture Duration")+
-    labs(y = "Estimated Admixture Time")+
+    labs(y = "Estimated Mean Admixture Time")+
     scale_color_manual("Gene Flow Model",
                        values = c(Colour_P[1],Colour_P[6],Colour_P[6],Colour_P[6],Colour_P[6],Colour_P[6]),
                        labels = c("Simple Pulse","Extended Pulse","Extended Pulse","Extended Pulse","Extended Pulse","Extended Pulse"))
